Trying to Fix background not showing.

--- a/style.css
+++ b/style.css
@@ -3,17 +3,17 @@
  */
 html 
 { 
-    background: url(images/background.jpg) no-repeat center center fixed; 
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    
 
 }
 
 body
 {
-	
+	background: url(/images/background.jpg) no-repeat center center fixed; 
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 h1
